It's Friday! It's 14:19!!

--- a/wercker.yml
+++ b/wercker.yml
@@ -6,3 +6,4 @@ build:
         - script:
             name: Hello
             code: echo "Hello, GitHub!"
+            code: echo "It's Friday! It's 14:19!!"
